# quidditch-players-rust-2026

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/api/: mod.rs
src/api/house/: mod.rs
src/api/house/controller/: house_controller.rs
src/api/house/repository/: house_repository.rs  mod.rs
src/api/house/service/: house_service.rs  mod.rs
src/api/player/: mod.rs
src/api/player/controller/: player_controller.rs
src/api/player/repository/: player_repository.rs
src/api/player/service/: player_service.rs
src/api/position/: mod.rs
src/api/position/controller/: mod.rs  position_controller.rs
src/api/position/repository/: mod.rs  position_repository.rs
src/api/position/service/: mod.rs  position_service.rs
src/api/status/: mod.rs
src/api/status/controller/: status_controller.rs
src/api/status/repository/: mod.rs  status_repository.rs
src/api/status/service/: status_service.rs
src/data/: mock_data.rs  mod.rs
src/data/model/: house.rs  mod.rs  player.rs  position.rs  response_wrapper.rs  status.rs
src/util/: constants.rs  error.rs
