[package]
name = "quidditch-players-rust-2026"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.23.1", features = ["v4"] }
rand = "0.10.1"
log = "0.4.29" #TODO get rid of this in the future